Fixed issues within Js and Changed UIs for consistency for AdminLTE UI

--- a/Pages/CreateUserProfile.cshtml
+++ b/Pages/CreateUserProfile.cshtml
@@ -33,7 +33,7 @@
 
             <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around; height:auto; flex-direction:column;">
                 <div class="row pb-1 pt-2">
-                    <div style="color:#17a2b8; text-align:center; font-size:1.7rem;" class="fw-bold">Create User</div>
+                    <div style="color:#17a2b8; text-align:center; font-size:1.7rem; font-weight:500">CREATE USER</div>
                     <div>
                         <hr />
                     </div>
@@ -54,45 +54,69 @@
                         <!-- User ID and ID Number on one line -->
                         <div class="mb-3" style="display: flex; justify-content: space-between;">
                             <div style="flex: 1;">
-                                <label asp-for="ProfileUsersData.IdNumber" class="form-label" style=""></label>
-                                <input asp-for="ProfileUsersData.IdNumber" placeholder="National/Iqama Number" class="form-control" />
-                                <span asp-validation-for="ProfileUsersData.IdNumber" class="text-danger fw-bold" style=""></span>
+                                <label asp-for="ProfileUsersData.IdNumber" class="form-label"></label>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-id-badge"></i></span>
+                                    </div>
+                                    <input type="text" asp-for="ProfileUsersData.IdNumber" placeholder="National/Iqama Number" class="form-control" />
+                                </div>
+                                <span asp-validation-for="ProfileUsersData.IdNumber" class="text-danger fw-bold"></span>
                             </div>
                         </div>
 
                         <!-- Full Name Field -->
                         <div class="mb-3">
-                            <label asp-for="ProfileUsersData.FullName" class="form-label" style=""></label>
-                            <input asp-for="ProfileUsersData.FullName" placeholder="Full Name" class="form-control" style="" />
-                            <span asp-validation-for="ProfileUsersData.FullName" class="mt-auto text-danger fw-bold" style=""></span>
+                            <label asp-for="ProfileUsersData.FullName" class="form-label"></label>
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                </div>
+                                <input type="text" asp-for="ProfileUsersData.FullName" placeholder="Full Name" class="form-control" />
+                            </div>
+                            <span asp-validation-for="ProfileUsersData.FullName" class="text-danger fw-bold"></span>
                         </div>
 
                         <!-- Email and Mobile Number on one line -->
                         <div class="mb-3" style="display: flex; justify-content: space-between;">
                             <div style="flex: 1; margin-right: 10px;">
-                                <label asp-for="ProfileUsersData.Email" class="form-label" style=""></label>
-                                <input asp-for="ProfileUsersData.Email" placeholder="Email Address" class="form-control" />
-                                <span asp-validation-for="ProfileUsersData.Email" class="text-danger fw-bold" style=""></span>
+                                <label asp-for="ProfileUsersData.Email" class="form-label"></label>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                                    </div>
+                                    <input type="email" asp-for="ProfileUsersData.Email" placeholder="Email Address" class="form-control" />
+                                </div>
+                                <span asp-validation-for="ProfileUsersData.Email" class="text-danger fw-bold"></span>
                             </div>
                             <div style="flex: 1;">
-                                <label asp-for="ProfileUsersData.MobileNo" class="form-label" style=""></label>
-                                <input asp-for="ProfileUsersData.MobileNo" placeholder="Mobile Number" class="form-control" />
-                                <span asp-validation-for="ProfileUsersData.MobileNo" class="text-danger fw-bold" style=""></span>
+                                <label asp-for="ProfileUsersData.MobileNo" class="form-label"></label>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-phone"></i></span>
+                                    </div>
+                                    <input type="tel" asp-for="ProfileUsersData.MobileNo" placeholder="Mobile Number" class="form-control" />
+                                </div>
+                                <span asp-validation-for="ProfileUsersData.MobileNo" class="text-danger fw-bold"></span>
                             </div>
                         </div>
 
                         <!-- Dropdown to Select Profile Name -->
-                        <!-- Profile Name Dropdown -->
                         <div class="mb-3">
-                            <label class="form-label" style="">Profile Name</label>
-                            <select asp-for="ProfileUsersData.ProfileSiteData.ProfileName" class="form-select" style="" id="profileSelect">
-                                <option value="" disabled selected>Select a Profile</option>
-                                @foreach (var profile in Model.ProfilesData)
-                                {
-                                    <option value="@profile.ProfileName" data-profileid="@profile.ProfileId">@profile.ProfileName</option>
-                                }
-                            </select>
-                            <span asp-validation-for="ProfileUsersData.ProfileSiteData.ProfileName" class="text-danger fw-bold" style=""></span>
+                            <label asp-for="ProfileUsersData.ProfileSiteData.ProfileName" class="form-label"></label>
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                </div>
+                                <select asp-for="ProfileUsersData.ProfileSiteData.ProfileName" class="form-select" id="profileSelect">
+                                    <option value="" disabled selected>Select a Profile</option>
+                                    @foreach (var profile in Model.ProfilesData)
+                                    {
+                                        <option value="@profile.ProfileName" data-profileid="@profile.ProfileId">@profile.ProfileName</option>
+                                    }
+                                </select>
+                            </div>
+                            <span asp-validation-for="ProfileUsersData.ProfileSiteData.ProfileName" class="text-danger fw-bold"></span>
                         </div>
 
                         <!-- Hidden fields Profile Id -->
@@ -107,21 +131,24 @@
                             @foreach (var checkbox in Model.Checkboxes)
                             {
                                 <div>
-                                    <input type="checkbox" class="form-input" name="UserStatusLst" id="checkbox_@checkbox.Value" value="@checkbox.Value" checked="@checkbox.IsChecked" />
+                                    <input type="checkbox" class="form-check-input" name="UserStatusLst" id="checkbox_@checkbox.Value" value="@checkbox.Value" checked="@checkbox.IsChecked" />
                                     <label for="checkbox_@checkbox.Value" class="fw-normal">@checkbox.Text</label>
                                 </div>
                             }
                         </div>
 
-                        <div class="row">
-                            <div class="col-2"></div>
-                            <div class="col-3 me-4">
-                                <button type="submit" onclick="prepareFormSubmission()" class="btn" style="width:140px; background-color:#17a2b8;color:white">Create</button>
+                        <!-- Buttons for form submission -->
+                        <div style="display: flex; justify-content:space-around;height:auto;">
+                            <div class="row">
+                                <div class="col-2"></div>
+                                <div class="col-3 me-4">
+                                    <button type="submit" onclick="prepareFormSubmission()" class="btn" style="width:140px; background-color:#17a2b8;color:white">Create</button>
+                                </div>
+                                <div class="col-4 ms-3">
+                                    <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
+                                </div>
+                                <div class="col-3"></div>
                             </div>
-                            <div class="col-4 ms-3">
-                                <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
-                            </div>
-                            <div class="col-3"></div>
                         </div>
                     </div>
                 </div>
