--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -34,7 +34,7 @@
     <div class="mb-2">
         <table class="table mb-0">
             <tbody>
-                <tr style="">
+                <tr >
                     <td>
                     </td>
                     <td>
@@ -186,10 +186,10 @@
     </div>
     <div id="downloadCointainer">
         <!-- Added Download Buttons -->
-        <button id="downloadButton1" class="btn rounded-pill shadow mt-2 fw-bold" style="background-color: #17a2b8;color:#ffffff">Export Above Data in CSV</button>
-        <button id="downloadButton2" class="btn rounded-pill shadow mt-2 fw-bold" style="background-color: #17a2b8;color:#ffffff">Export All Data in CSV</button>
-        <button id="downloadButton3" class="btn rounded-pill shadow mt-2 fw-bold" style="background-color: #17a2b8;color:#ffffff">Export Above Data in Excel</button>
-        <button id="downloadButton4" class="btn rounded-pill shadow mt-2 fw-bold" style="background-color: #17a2b8;color:#ffffff">Export All Data in Excel</button>
+        <button id="downloadButton1" class="btn rounded-pill shadow mt-2 fw-bold" style="background-color: #17a2b8;color:#ffffff"><i class="ion-android-download">&nbsp;</i>Export Above Data in CSV</button>
+        <button id="downloadButton2" class="btn rounded-pill shadow mt-2 fw-bold" style="background-color: #17a2b8;color:#ffffff"><i class="ion-android-download">&nbsp;</i>Export All Data in CSV</button>
+        <button id="downloadButton3" class="btn rounded-pill shadow mt-2 fw-bold" style="background-color: #17a2b8;color:#ffffff"><i class="ion-android-download">&nbsp;</i>Export Above Data in Excel</button>
+        <button id="downloadButton4" class="btn rounded-pill shadow mt-2 fw-bold" style="background-color: #17a2b8;color:#ffffff"><i class="ion-android-download">&nbsp;</i>Export All Data in Excel</button>
     </div>
 </div>
 
@@ -209,7 +209,7 @@
     <div class="overlay-content-directPage" style="background-color:white">
         <div class="row pb-2">
             <h4 style="color:#17a2b8; text-align:center">Page Number #</h4>
-            <hr style="" />
+            <hr  />
         </div>
         <div class="mb-3">
             <label for="directPageInputOverlay" class="form-label">Page Number:</label><br />
