--- a/Pages/CreateUserAccessControl.cshtml
+++ b/Pages/CreateUserAccessControl.cshtml
@@ -29,69 +29,91 @@
 
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
     <form method="post" onsubmit="prepareFormSubmission();">
-        <div id="createProfileSection" class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:fit-content;font-size:2rem;">
-            <input type="hidden" id="SelectedProfileId" name="SelectedProfileId"/>
+        <div id="createAccessSection" class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:70%">
+            <input type="hidden" id="SelectedProfileId" name="SelectedProfileId" />
             <input type="hidden" id="SelectedProfileName" name="SelectedProfileName" />
             <input type="hidden" id="SelectedPagesJson" name="SelectedPagesJson" />
 
-            <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;font-size:1.5rem;">
+            <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
                 <div class="row pb-1 pt-2">
-                    <h2 style="color:#17a2b8; text-align:center; font-size:2rem;">Create User Access Control List</h2>
+                    <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">CREATE USER ACCESS CONTROL LIST</div>
                     <div>
                         <hr />
                     </div>
-
-                    <div class="row" style="font-size:1.2rem">
-                        <!-- Add radio buttons for Default View and Top View -->
-                        <div class="col-4" id="profileTypeViewContainer">
-                            <label class="form-label mt-2">Changes For: </label><br />
-                            <label class="fw-normal"><input type="radio" name="profileType" value="oldProfile" checked> Select Existing Profile</label><br />
-                            <label class="fw-normal"><input type="radio" name="profileType" value="newProfile"> Create New Profile</label>
-                        </div>
-
-                        <!-- Profile Dropdown -->
-                        <div class="col mb-3" id="profileDropdownDiv" style="display:none;">
-                            <label for="ProfileId" class="form-label" style="font-size:1.2rem;">Select Profile</label>
-                            <select id="ProfileId" class="form-select" name="ProfileId" style="font-size:1.2rem;">
-                                <option value="" disabled selected>Select a Profile</option>
-                                @foreach (var profile in Model.AllProfilesData)
-                                {
-                                    <option value="@profile.ProfileId">@profile.ProfileName</option>
-                                }
-                            </select>
-                        </div>
-
-                        <!-- Profile Input-->
-                        <div id="profileInputDiv" class="col mb-3" style="display:none;">
-                            <label for="ProfileName" class="form-label" style="font-size:1.2rem;">Profile Name</label>
-                            <input id="ProfileName" placeholder="Profile Name" class="form-control" />
-                        </div>
-                    </div>
-
-                    <div><hr style="border-top: 1px solid #808080;" /></div>
-                    
-
-                    <!-- Checkboxes to select pages -->
-                    <div class="mb-3">
-                        <label class="form-label" style="font-size:1.2rem;">Select Pages</label>
-                        <div id="pageCheckboxContainer" class="form-check" style="display: flex; flex-wrap: wrap; column-gap: 10px; justify-content: flex-start;">
-                            <!-- Checkboxes will be dynamically rendered here -->
-                        </div>
-                    </div>
                 </div>
-            </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div class="card-title fw-bold">User Details</div>
+                        <div class="card-tools">
+                            <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                                <i class="fas fa-minus"></i>
+                            </button>
+                            <button type="button" class="btn btn-tool" data-card-widget="remove">
+                                <i class="fas fa-times"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card-body">
 
-            <!-- Buttons for form submission -->
-            <div class="container form-control border-2" style="display: flex; justify-content:space-around;height:auto;">
-                <div class="row">
-                    <div class="col-2"></div>
-                    <div class="col-3 me-4">
-                        <button type="submit" class="btn" style="width:140px; background-color:#17a2b8;color:white">Create</button>
+                        <div class="row ms-2">
+                            <!-- Add radio buttons for Default View and Top View -->
+                            <div class="col-4" id="profileTypeViewContainer">
+                                <label class="mt-2">Changes For: </label><br />
+                                <label><input class="form-check-input" type="radio" name="profileType" value="oldProfile" checked> Select Existing Profile</label><br />
+                                <label><input class="form-check-input" type="radio" name="profileType" value="newProfile"> Create New Profile</label>
+                            </div>
+
+                            <!-- Profile Dropdown -->
+                            <div class="col mb-3" id="profileDropdownDiv" style="display:none;">
+                                <label for="ProfileId" class="form-label">Select Profile</label>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                    </div>
+                                    <select id="ProfileId" class="form-select" name="ProfileId">
+                                        <option value="" disabled selected>Select a Profile</option>
+                                        @foreach (var profile in Model.AllProfilesData)
+                                        {
+                                            <option value="@profile.ProfileId">@profile.ProfileName</option>
+                                        }
+                                    </select>
+                                </div>
+                            </div>
+
+                            <!-- Profile Input-->
+                            <div id="profileInputDiv" class="col mb-3" style="display:none;">
+                                <label for="ProfileName" class="form-label">Profile Name</label>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                    </div>
+                                    <input id="ProfileName" placeholder="Profile Name" class="form-control" />
+                                </div>
+                            </div>
+                        </div>
+
+                        <hr />
+
+                        <!-- Checkboxes to select pages -->
+                        <div class="mb-3">
+                            <label class="form-label">Select Pages</label>
+                            <div id="pageCheckboxContainer" class="form-check" style="display: flex; flex-wrap: wrap; column-gap: 10px; justify-content: flex-start;">
+                                <!-- Checkboxes will be dynamically rendered here -->
+                            </div>
+                        </div>
+                        <div style="display: flex; justify-content:space-around;height:auto;">
+                            <div class="row">
+                                <div class="col-2"></div>
+                                <div class="col-3 me-4">
+                                    <button type="submit" class="btn" style="width:140px; background-color:#17a2b8;color:white">Create</button>
+                                </div>
+                                <div class="col-4 ms-3">
+                                    <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
+                                </div>
+                                <div class="col-3"></div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-4 ms-3">
-                        <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
-                    </div>
-                    <div class="col-3"></div>
                 </div>
             </div>
         </div>
