--- a/Pages/ProfileCategoryAssign.cshtml
+++ b/Pages/ProfileCategoryAssign.cshtml
@@ -27,72 +27,91 @@
     </script>
 }
 
-<div class="mb-2" style="display:flex; flex-direction:row;justify-content:space-evenly; align-content:center;">
+<div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
     <form method="post" id="categoryAssignForm">
-        <div id="createProfileSection" class="column form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:fit-content;font-size:2rem;">
+            <div id="createProfileSection" class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:70%">
             <input type="hidden" id="SelectedProfileId" name="SelectedProfileId" />
             <input type="hidden" id="SelectedCategoriesJson" name="SelectedCategoriesJson" />
             <input type="hidden" id="SelectedCategoriesJson" name="SelectedCategoriesJson" />
             <input type="hidden" id="SelectedProfileName" name="SelectedProfileName" />
 
-            <div class="form-control border-2 mb-2 col" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;font-size:1.5rem;">
-                <div class="pb-1 pt-2 row">
-                    <h2 style="color:#17a2b8; text-align:center; font-size:2rem;">Assign Categories to Profile</h2>
+            <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
+                <div class="row pb-1 pt-2">
+                    <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">ASSIGN CATEGORIES TO PROFILE</div>
                     <div>
                         <hr />
                     </div>
-                    <!-- Profile Dropdown -->
-                    <div class="mb-3">
-                        <label class="form-label" style="font-size:1.2rem;">Select a Profile</label>
-                        <select asp-for="profileSite.ProfileName" id="ProfileId" class="form-select" style="font-size:1.2rem;" id="profileSelect">
-                            <option value="" disabled selected>Select a Profile</option>
-                            @foreach (var profile in Model.AllProfilesData)
-                            {
-                                <option value="@profile.ProfileId" data-profilename="@profile.ProfileName">@profile.ProfileName</option>
-                            }
-                        </select>
-                        <span asp-validation-for="profileSite.ProfileName" class="text-danger fw-bold" style="font-size: 1.2rem;"></span>
-                    </div>
-
-                    <!-- Multi-Select for Categories -->
-                    <div class="mb-3">
-                        <div class="form-check-label" style="display:flex; justify-content:flex-start; width:inherit;">
-                            <label id="CategoryIdsLabel" for="CategoryIds" class="form-label" style="font-size:1.2rem; white-space:nowrap;">Select Categories</label>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div class="card-title fw-bold">Categories to Profile Details</div>
+                        <div class="card-tools">
+                            <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                                <i class="fas fa-minus"></i>
+                            </button>
+                            <button type="button" class="btn btn-tool" data-card-widget="remove">
+                                <i class="fas fa-times"></i>
+                            </button>
                         </div>
-                        
-                        <select id="CategoryIds" class="form-control" style="font-size:1.2rem; height:15rem" name="CategoryIds" multiple required>
-                            <option value="" disabled selected>Select Categories</option>
-                            @foreach (var category in Model.AllCategoriesData)
-                            {
-                                <option value="@category.PageCatId">@category.CategoryName</option>
-                            }
-                        </select>
                     </div>
+                    <div class="card-body">
+                        <!-- Profile Dropdown -->
+                        <div class="mb-3">
+                            <label class="form-label">Select a Profile</label>
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                </div>
+                                <select asp-for="profileSite.ProfileName" id="ProfileId" class="form-select" id="profileSelect">
+                                    <option value="" disabled selected>Select a Profile</option>
+                                    @foreach (var profile in Model.AllProfilesData)
+                                    {
+                                        <option value="@profile.ProfileId" data-profilename="@profile.ProfileName">@profile.ProfileName</option>
+                                    }
+                                </select>
+                            </div>
+                            <span asp-validation-for="profileSite.ProfileName" class="text-danger fw-bold"></span>
+                        </div>
 
-                    <!-- Placeholder for dynamic sections -->
-                    <div id="dynamicCategorySections" class="mb-3">
-                        <!-- New Category section will be appended here -->
+                        <!-- Multi-Select for Categories -->
+                        <div class="mb-3">
+                            <div class="form-check-label" style="display:flex; justify-content:flex-start; width:inherit;">
+                                <label id="CategoryIdsLabel" for="CategoryIds" class="form-label" style="white-space:nowrap;">Select Multiple Categories</label>
+                            </div>
+
+                            <select id="CategoryIds" class="form-control" style="height:15rem;" name="CategoryIds" multiple required>
+                                <option value="" disabled selected>Select Categories</option>
+                                @foreach (var category in Model.AllCategoriesData)
+                                {
+                                    <option value="@category.PageCatId">@category.CategoryName</option>
+                                }
+                            </select>
+                        </div>
+
+                        <!-- Placeholder for dynamic sections -->
+                        <div id="dynamicCategorySections" class="mb-3">
+                            <!-- New Category section will be appended here -->
+                        </div>
+
+                        <!-- Buttons for form submission -->
+                        <div style="display: flex; justify-content:space-around;height:auto;">
+                            <div class="row">
+                                <div class="col-3">
+                                    <button type="submit" class="btn" style="width:140px; background-color:#17a2b8;color:white">Assign</button>
+                                </div>
+                                <div class="col-3 ms-2 me-2">
+                                    <button id="ClearBtn" type="reset" class="btn" style="width:140px; background-color:#17a2b8;color:white">Clear</button>
+
+                                </div>
+                                <div class="col-3">
+                                    <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-
                 </div>
             </div>
-
-            <!-- Buttons for form submission -->
-            <div class="form-control border-2 col" style="display: flex; justify-content:space-around;height:auto;">
-                <div class="row">
-                    <div class="col-3">
-                        <button type="submit" class="btn" style="width:140px; background-color:#17a2b8;color:white">Assign</button>
-                    </div>
-                    <div class="col-3 ms-2 me-2">
-                        <button id="ClearBtn" type="reset" class="btn" style="width:140px; background-color:#17a2b8;color:white">Clear</button>
-
-                    </div>
-                    <div class="col-3">
-                        <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
-                    </div>
-                </div>
             </div>
-        </div>
     </form>
 </div>
 
