--- a/Pages/Shared/_SidebarPartial.cshtml
+++ b/Pages/Shared/_SidebarPartial.cshtml
@@ -50,7 +50,7 @@
             <li class="nav-header">Profile View</li>
             <li class="nav-item">
                 <a href="#" class="nav-link">
-                    <i class="nav-icon fas fa-users"></i>
+                    <i class="nav-icon fas fa-user-circle"></i>
                     <p>
                         Profile <i class="fas fa-angle-left right"></i>
                     </p>
@@ -63,7 +63,7 @@
             <li class="nav-header">Categories View</li>
             <li class="nav-item">
                 <a href="#" class="nav-link">
-                    <i class="nav-icon fas fa-book"></i>
+                    <i class="nav-icon fas ion-android-drafts"></i>
                     <p>
                         Categories <i class="fas fa-angle-left right"></i>
                     </p>
